Fixed input and overflow bugs

--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,7 +1,6 @@
 .common-component {
     display: flex;
-    width: 100vw;
-    height: 22vw;
+    width: 100%;
 }
 
 .right-components {
