--- a/src/app/left-component/left.component.css
+++ b/src/app/left-component/left.component.css
@@ -22,3 +22,14 @@ input {
     width: 50vw;
     height: 100%;
 }
+
+input[type="number"]::-webkit-outer-spin-button,
+input[type="number"]::-webkit-inner-spin-button {
+    -webkit-appearance: none;
+    margin: 0;
+}
+
+input[type="number"] {
+    appearance: none;
+    -moz-appearance: textfield;
+}
