--- a/src/app/right-component/right.component.css
+++ b/src/app/right-component/right.component.css
@@ -24,3 +24,13 @@ div {
     background-color: RGB(249,250,252);
 }
 
+input[type="number"]::-webkit-outer-spin-button,
+input[type="number"]::-webkit-inner-spin-button {
+    -webkit-appearance: none;
+    margin: 0;
+}
+
+input[type="number"] {
+    appearance: none;
+    -moz-appearance: textfield;
+}
